# photoqt

./: .gitlab-ci.yml  .gitmodules  .~lock.methods.ods#  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  DONATIONS.md  INSTALL  INSTALL.md  README  README.md  for_photoqt_desktop_FULL  for_photoqt_desktop_QT  img.qrc  lang.qrc  org.photoqt.PhotoQt.appdata.xml  org.photoqt.PhotoQt.metainfo.xml  photoqt.appdata.xml  photoqt.desktop  qml.qrc  windowsicons.rc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question_or_comments.md
.gitlab/issue_templates/: BUG.md  Bug report.md  FEATURE_REQUEST.md  QUESTION.md  Question or Comments.md
CMake/: ComposeDesktopFile.cmake  ComposeLangResourceFile.cmake  FindExiv2.cmake  FindFreeImage.cmake  FindGraphicsMagick.cmake  FindLibRaw.cmake  FindLibmpv.cmake  FindLibsai.cmake  FindMagick.cmake  FindQuaZIP.cmake  ListFilesCPlusPlus.cmake  ListFilesCPlusPlusShared.cmake  ListFilesExtensions.cmake  ListFilesQML.cmake  ListFilesQMLDuplicate.cmake  ListFilesQMLIntegrated.cmake  ListFilesQMLModern.cmake  ListFilesQMLShared.cmake  ListFilesResources.cmake  ListFilesTesting.cmake  cmake_uninstall.cmake.in
appimage/: AppRun
cplusplus/: configfiles.h  hideclose.h  keypresschecker.h  logger.h  main.cpp  mainhandler.cpp  mainhandler.h  mainwindow.cpp  mainwindow.h  passon.h  startup.h  touchhandler.h  utilities.h  variables.h
cplusplus/clipboard/: clipboard.cpp  clipboard.h
cplusplus/contextmenu/: contextmenu.cpp  contextmenu.h
cplusplus/elements/: pqc_filefoldermodel.cpp  pqc_filefoldermodelcache.cpp
cplusplus/extensions/: pqc_extensionactions.h  pqc_extensionmethods.cpp  pqc_extensionproperties.cpp  pqc_extensions_api.h  pqc_extensionshandler.cpp
cplusplus/filefoldermodel/: filefolderadvancedsort.cpp  filefolderadvancedsort.h  filefoldermodel.cpp  filefoldermodel.h  filefoldermodelcache.cpp  filefoldermodelcache.h
cplusplus/handlefiles/: getimageinfo.cpp  getimageinfo.h  loaddir.cpp  loaddir.h
cplusplus/header/: pqc_commandlineparser.h  pqc_configfiles.h  pqc_constants.h  pqc_extensioninfo.h  pqc_extensionmethods.h  pqc_extensionproperties.h  pqc_extensionsettings.h  pqc_extensionshandler.h  pqc_extensionshandler_qml.h  pqc_filefoldermodel.h  pqc_filefoldermodelCPP.h  pqc_filefoldermodelcache.h  pqc_helper.h  pqc_httpreplytimeout.h  pqc_imagecache.h  pqc_imageformats.h  pqc_imageformats_qml.h  pqc_imagehandler.h  pqc_imagehandler_qml.h  pqc_imageplugin.h  pqc_imageplugin_DUMMY.h  pqc_imageplugin_libarchive.h  pqc_imageplugin_libraw.h  pqc_imageplugin_libsai.h  pqc_imageplugin_magick.h  pqc_imageplugin_pdf.h  pqc_imageplugin_qt.h  pqc_imageplugin_resvg.h  pqc_imageplugin_video.h  pqc_loadimage.h  pqc_loadimage_archive.h  pqc_loadimage_devil.h  pqc_loadimage_freeimage.h  pqc_loadimage_libsai.h  pqc_loadimage_libvips.h  pqc_loadimage_magick.h  (+59 more)
cplusplus_old/: main_full.cpp
extensions/: pqc_configtemplate.h  pqc_extensionshandler.cpp
flatpak/: org.qt.photoqt.json  photoqtflatpak.asc
img/: filetypes.qrc  img.qrc
javascript/: keydetect.js
lang/: lang.qrc  photoqt_ar.ts  photoqt_ca_ES.ts  photoqt_cs.ts  photoqt_cs_CZ.ts  photoqt_de.ts  photoqt_de_DE.ts  photoqt_el.ts  photoqt_en.ts  photoqt_es.ts  photoqt_es_CO.ts  photoqt_es_CR.ts  photoqt_es_ES.ts  photoqt_fi.ts  photoqt_fr.ts  photoqt_fr_FR.ts  photoqt_he.ts  photoqt_hu.ts  photoqt_it.ts  photoqt_it_IT.ts  photoqt_ja.ts  photoqt_ku_IQ.ts  photoqt_lt.ts  photoqt_lt_LT.ts  photoqt_nb_NO.ts  photoqt_nl_NL.ts  photoqt_nn_NO.ts  photoqt_pl.ts  photoqt_pl_PL.ts  photoqt_pt_BR.ts  photoqt_pt_PT.ts  photoqt_ro.ts  photoqt_ru.ts  photoqt_ru_RU.ts  photoqt_sk.ts  photoqt_sr_RS.ts  photoqt_tr.ts  photoqt_uk.ts  photoqt_uk_UA.ts  photoqt_vi.ts  (+3 more)
man/: photoqt.trans  photoqt_en.1  photoqt_en.htm  photoqt_en.tex  photoqt_es.1  photoqt_es.htm  photoqt_es.tex
misc/: checksettings.db  contextmenu.db  defaultsettings.db  extensions.qrc  generate.py  go-png2ico  imageformats.db  imgurhistory.db  location.db  misc.qrc  positions.db  settings.db  shortcuts.db  shortcuts__old.db  usersettings.db
python/: chromecast.py  chromecast_cast.py  chromecast_disconnect.py  chromecast_discovery.py  pqpy.h  python.qrc
qml/: .qmllint.ini  Caller.qml  Colour.qml  PQBaseLook.qml  PQCmdReceived.qml  PQFolderModel.qml  PQLoader.qml  PQMainWindow.qml  PQMainWindowBackground.qml  PQMainWindowIntegrated.qml  PQMainWindowModern.qml  PQModel.qml  PQTrayIcon.qml  PQVariables.qml  PQWindowSizePopupManager.qml  Shortcuts.qml  handlestuff.js  loadfile.js  loadfiles.js  mainwindow.qml  qml.qrc
qmlresources/: elements.qrc  fadein.qrc  filemanagement.qrc  globalstrings.qrc  mainview.qrc  openfile.qrc  openfileold.qrc  other.qrc  qml.qrc  settings.qrc  settings2.qrc  settingsmanager.qrc  shortcuts.qrc  slidein.qrc  slideshow.qrc  vars.qrc  wallpaper.qrc
snap/: snapcraft.yaml
testing/: CMakeLists.txt  main.cpp  pqc_test.cpp  pqc_test.h  pqctest_scripts.cpp
testing/header/: pqctest_scripts.h  pqctest_scriptsfilespaths.h
testing/pqt_filefoldermodel/: CMakeLists.txt  pqt_filefoldermodel.cpp  pqt_filefoldermodel.h
testing/pqt_scriptsclipboard/: CMakeLists.txt  pqt_scriptsclipboard.cpp  pqt_scriptsclipboard.h
testing/pqt_scriptsconfig/: CMakeLists.txt  pqt_scriptsconfig.cpp  pqt_scriptsconfig.h
testing/pqt_scriptsfiledialog/: CMakeLists.txt  pqt_scriptsfiledialog.cpp  pqt_scriptsfiledialog.h
testing/pqt_scriptsfilemanagement/: CMakeLists.txt  pqt_scriptsfilemanagement.cpp  pqt_scriptsfilemanagement.h
testing/pqt_scriptsfilespaths/: CMakeLists.txt  pqt_scriptsfilespaths.cpp  pqt_scriptsfilespaths.h
testing/pqt_scriptsimages/: CMakeLists.txt  pqt_scriptsimages.cpp  pqt_scriptsimages.h
testing/resources/: testarchive.7z  testarchive.rar  testing.qrc
testing/singletons/scripts/: pqctest_scriptsfilespaths.cpp
windows/: AdvUninstLog2.nsh  FileAssociation.nsh  UninstallLog.nsh  build_gettext_catalog_nsi.py  build_locale_nsi.py  generatensi.py  license.txt  photoqt-portable-setup.nsi  photoqt-setup.nsi  photoqt.nsi  photoqt_basic.nsi  photoqt_full.nsi  vcpkg.json
(+2407 files in other folders)
